--- a/assets/SASS/main.css
+++ b/assets/SASS/main.css
@@ -5810,10 +5810,10 @@ button.close {
   .first-bg .navbar-collapse {
     width: 100%;
     padding: 35px 0 0 35px;
-    font-size: 14px;
+    font-size: 15px;
     position: relative;
-    top: 20px;
-    left: 50px; }
+    top: 30px;
+    left: 15px; }
     .first-bg .navbar-collapse ul li a {
       color: #ffffff; }
   .first-bg .clock {
@@ -5854,11 +5854,12 @@ button.close {
     margin: 100px 0 0 0;
     color: #fff; }
     .first-bg .paragraph-one .btn {
+      width: 60%;
       color: #4c667a;
       font-family: 'Raleway Bold', sans-serif;
       border-radius: 0 !important;
       padding: 10px 20px;
-      box-shadow: 0px 10px 30px black;
+      box-shadow: 0 10px 30px #476b91;
       display: none; }
   .first-bg .navbar-toggle {
     margin-top: 50px !important; }
@@ -5998,7 +5999,7 @@ button.close {
     display: table;
     padding: 0 !important; }
     .fifth-div .displayes .color-orange, .fifth-div .displayes .css-three, .fifth-div .displayes .react-bg, .fifth-div .displayes .react-bg .apis-bg, .fifth-div .react-bg .displayes .apis-bg {
-      background-color: rgba(255, 115, 0, 0.91);
+      background-color: rgba(255, 114, 0, 0.9);
       height: 335px;
       width: 100%;
       display: table-cell;
@@ -6018,7 +6019,7 @@ button.close {
         position: relative;
         top: -20px; }
   .fifth-div .java-sc {
-    background-color: rgba(22, 64, 94, 0.87);
+    background-color: rgba(0, 63, 100, 0.8);
     padding: 87px 0; }
     .fifth-div .java-sc p {
       width: 66%;
@@ -6027,7 +6028,7 @@ button.close {
     .fifth-div .java-sc img {
       margin: 0 0 20px 0; }
   .fifth-div .angular-js {
-    background-color: rgba(165, 29, 25, 0.88);
+    background-color: rgba(158, 24, 24, 0.9);
     padding: 87px 0; }
     .fifth-div .angular-js p {
       width: 71%;
@@ -6036,14 +6037,14 @@ button.close {
     .fifth-div .angular-js img {
       margin: 0 0 15px 0; }
   .fifth-div .react-bg {
-    background-color: rgba(22, 178, 181, 0.9) !important; }
+    background-color: rgba(0, 189, 196, 0.8) !important; }
     .fifth-div .react-bg img {
       position: relative;
       top: -15px; }
     .fifth-div .react-bg p {
       width: 70px; }
     .fifth-div .react-bg .apis-bg {
-      background-color: rgba(16, 86, 165, 0.81); }
+      background-color: rgba(8, 78, 164, 0.8); }
 
 .map {
   position: relative; }
@@ -6170,14 +6171,28 @@ button.close {
     color: #dd3125; }
 
 .footer {
-  color: #ffffff;
-  font-family: "Raleway", sans-serif;
-  background-color: #043450;
-  font-size: 16px; }
+  background-color: #043450; }
+  .footer .all-rights-reserved {
+    color: #ffffff;
+    font-family: "Open Sans",sans-serif;
+    font-size: 16px; }
 
 @media (min-width: 992px) and (max-width: 1199px) {
+  .first-bg .app-bakerz-logo {
+    padding: 0 0 0 10px; }
+  .first-bg .navbar-collapse {
+    left: -35px; }
   .first-bg .clock {
-    margin: -23px -55px 0 0 !important; } }
+    display: none; }
+
+  .about-background .second-div .front-end-development {
+    margin-left: 0 !important; }
+  .about-background .second-div .js-dev {
+    margin-left: 0; }
+  .about-background .second-div h3 {
+    font-size: 30px; }
+  .about-background .second-div .paragraph-two {
+    font-size: 16px; } }
 @media (min-width: 320px) and (max-width: 767px) {
   .first-bg {
     height: auto !important;
@@ -6205,24 +6220,28 @@ button.close {
         font-size: 18px;
         display: inline-block; }
 
-  .second-div {
+  .about-background .second-div {
     padding: 0 !important; }
-    .second-div h3 {
-      padding: 0;
-      margin: 25px 0;
-      font-size: 22px; }
-    .second-div p {
+    .about-background .second-div h3 {
+      font-size: 20px !important;
+      margin: 40px 0 25px 0 !important; }
+    .about-background .second-div .div-two-nested .front-end-development {
+      margin-left: 0; }
+    .about-background .second-div .div-two-nested img {
+      height: 40px !important; }
+    .about-background .second-div p {
       padding: 0 9px 22px;
-      margin: 0;
-      text-align: center;
-      font-size: 12px !important; }
-    .second-div .paragraph-two {
-      line-height: 25px;
-      font-size: 14px; }
-    .second-div .front-end-development {
-      margin-left: 0 !important; }
-    .second-div .js-dev {
-      margin-left: 0 !important; }
+      font-size: 14px !important;
+      text-align: center; }
+    .about-background .second-div .caption {
+      font-size: 11px !important;
+      font-family: 'Raleway Bold', sans-serif;
+      font-weight: 600;
+      color: #1b3a54; }
+    .about-background .second-div .front-end-development {
+      margin-left: 0; }
+    .about-background .second-div .js-dev {
+      margin-left: 0; }
 
   .third-div .container {
     padding: 10px; }
@@ -6261,10 +6280,29 @@ button.close {
     background-size: cover !important; }
     .fifth-div .displayes .color-orange p, .fifth-div .displayes .css-three p, .fifth-div .displayes .react-bg p, .fifth-div .react-bg .displayes .apis-bg p {
       top: 0; }
+    .fifth-div .displayes .color-orange img, .fifth-div .displayes .css-three img, .fifth-div .displayes .react-bg img, .fifth-div .react-bg .displayes .apis-bg img {
+      top: 0; }
+    .fifth-div .displayes .css-three img {
+      top: 5px;
+      margin: 20px 0 !important; }
+    .fifth-div .java-sc {
+      padding: 50px 0 !important;
+      font-size: 14px; }
+    .fifth-div .angular-js {
+      padding: 50px 0 !important;
+      font-size: 14px; }
 
   .form-transformation {
     left: 10px !important;
     font-size: 15px !important; }
+    .form-transformation .form-div {
+      width: 100%;
+      height: 100%; }
+      .form-transformation .form-div h1 {
+        font-size: 26px !important;
+        margin-top: 0 !important; }
+      .form-transformation .form-div button {
+        height: 40px; }
     .form-transformation .textarea-comments .form-control {
       font-size: 15px !important; }
 
@@ -6272,15 +6310,25 @@ button.close {
     padding: 10px 0 5px 0; }
   .details p {
     width: 100%;
-    margin: 15px 0 0 0 !important; }
+    margin: 15px 0 0 0 !important;
+    font-size: 16px !important; }
 
+  .last-div .bg-on-image {
+    padding: 30px 0; }
   .last-div .appBakerZ {
+    margin: 10px 0;
     padding: 0 !important; }
+  .last-div h5 {
+    font-size: 14px !important; }
+  .last-div p {
+    font-size: 10px !important; }
   .last-div .input-group {
     display: inline-block;
     padding: 0 !important; }
     .last-div .input-group input {
-      width: 100%; }
+      width: 100%;
+      text-align: center;
+      color: #333; }
   .last-div button {
     margin: 10px 0 0 10px;
     width: 135px !important; }
@@ -6291,7 +6339,10 @@ button.close {
     padding-top: 0 !important;
     cursor: pointer; }
 
-  .footer .all-rights-reserved {
-    display: inline-block; } }
+  .footer {
+    margin: 0; }
+    .footer .all-rights-reserved {
+      font-size: 12px;
+      display: inline-block; } }
 
 /*# sourceMappingURL=main.css.map */
